X01AD: Import hvdcp_opti from UL-ASUS_X01A-WW-17.2018.2004.31-user
* Charger.

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -9,3 +9,11 @@ on fs
 
 on boot
     start health-hal-2-1
+    start hvdcp_opti
+
+# HVDCP
+service hvdcp_opti /system/bin/hvdcp_opti
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
