--- a/.github/workflows/pbrp.yml
+++ b/.github/workflows/pbrp.yml
@@ -17,11 +17,11 @@ on:
       DEVICE_TREE:
         description: 'Custom Recovery Tree' # Your already made Device Tree for TWRP
         required: true
-        default: 'https://github.com/Assunzain/twrp_asus_X01AD'
+        default: 'https://github.com/Assunzain/twrp_device_asus_X01AD'
       DEVICE_TREE_BRANCH:
         description: 'Custom Recovery Tree Branch' # Your Device Tree Branch, make sure it's right.
         required: true
-        default: 'pbrp-12.1'
+        default: 'android-12.1'
       DEVICE_PATH:
         description: 'Specify your Device Path' # As is, just like your DEVICE_PATH in your BoardConfig.mk
         required: true
